--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="dist/analytics.js" defer></script>
 </head>
 <body>
-    
+    <button value="Click Me!"></button>
 </body>
 </html>
