--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <script src="dist/app.js" defer></script>
 </head>
 <body>
-<input type="text" id="user-input"></input>
+  <div id="app"></div>
 </body>
 </html>
