--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
   <div id="app"></div>
+  <button id="Click Me">Click Me</button>
+  <form>
+    <input type="text" placeholder="Course title" id="title"></input>
+    <input type="text" placeholder="Course price" id="price"></input>
+    <button type="submit">Submit</button>
+  </form>
 </body>
 </html>
